<resources>
<!--declared string value-->
    <string name="app_name">My UI Design</string>
    <string name="checkout">Checkout</string>
    <string name="deliver_to">Deliver to</string>
    <string name="address">Imran Road, Khayaban Colony, Lahore, Pakistan7</string>
    <string name="change_address">change address</string>
    <string name="payment_method">Payment Method</string>
    <string name="card_pin">**** **** **** 3947</string>
    <string name="visa">Visa</string>
    <string name="amount">Amount</string>
    <string name="item_total">Item total</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="total">Total</string>
    <string name="total_fee_value">$1050</string>
    <string name="delivery_fee_value">$50</string>
    <string name="item_total_fee">$1000</string>
    <string name="place_order">Place Order</string>
    <string name="mode">Mode</string>


</resources>